perubahan dan penambahan pada index html di bagian footer dan gambar icon title

--- a/src/input.css
+++ b/src/input.css
@@ -38,3 +38,7 @@
   .navnull {
     @apply opacity-0 invisible transition-all duration-300;
   }
+
+  .dihover {
+    @apply hover:opacity-80 duration-200 active:opacity-100 active:scale-105;
+  }
